MicrobotIstio/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
  namespace: bot-demo
spec:
  selector:
    app: microbot
  ports:
  - port: 9100
    targetPort: 80
