MicrobotIstio/bot-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microbot-virtual-svc
  namespace: bot-demo
spec:
  hosts:
  - bot.demo.live
  gateways:
  - bot-cluster-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: microbot-service.bot-demo.svc.cluster.local
        port:
          number: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
  namespace: bot-demo
spec:
  selector:
    app: microbot
  ports:
  - port: 9100
    targetPort: 80
